@@ -1,5 +1,0 @@
-/* Dummy header compatibility so that we can reduce the number of
-   files that need modification.  */
-#ifndef _STDIO_EXT_H
-#define _STDIO_EXT_H
-#endif
